--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage":"https://gelatocooking.github.io/Schody-szwagry-2/",
+  "homepage":".",
 
   "name": "my-app",
   "version": "0.1.0",
