--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
-  "homepage":".",
-
+  "homepage": ".",
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
@@ -15,6 +14,7 @@
     "classnames": "^2.5.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
@@ -24,7 +24,7 @@
   },
   "scripts": {
     "predeploy": "npm run build",
-  "deploy": "gh-pages -d build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
