--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "react-icons": "^5.3.0",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.23.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "sass": "^1.77.6",
     "web-vitals": "^2.1.4"
   },
@@ -55,6 +55,6 @@
     "@types/react": "^18.3.5",
     "@types/react-modal": "^3.16.3",
     "gh-pages": "^6.1.1",
-    "typescript": "^5.6.2"
+    "typescript": "^4.9.5"
   }
 }
