--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "@types/react-dom": "^18.3.0",
     "classnames": "^2.5.1",
     "emailjs-com": "^3.2.0",
-    "next": "^14.2.11",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
@@ -22,13 +21,12 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "compile:sass": "sass style.scss style.module.css",
     "watch:sass": "sass --watch style.scss:style.module.css"
   },
